--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   },
   "homepage": "https://github.com/instafluff/DogecoinJS#readme",
   "devDependencies": {
+    "browserify": "^17.0.0",
     "npm-run-all": "^4.1.5",
     "terser": "^5.6.0"
   },
   "dependencies": {
     "node-fetch": "^2.6.1",
     "pusher-js": "^7.0.3",
-    "webwebweb": "^1.4.6"
+    "webwebweb": "^1.4.6",
+    "ws": "^7.4.3"
   }
 }
